--- a/templates/header.html
+++ b/templates/header.html
@@ -1,12 +1,12 @@
 <nav>
     <div class="nav-left">            
-        <img src="images/Locri-49K.jpeg" alt="">                     
+        <img src="assets/images/Locri-49K.jpeg" alt="">                     
     </div>
     <div class="nav-center">
         <h3>Zauberkette</h3>                    
     </div>
     <div class="nav-right">
-        <img src="images/acc-helper.jpg" class="chain-helper" >
+        <img src="assets/images/acc-helper.jpg" class="chain-helper" >
         <div class="menuToggle" id="menuToggle">
         <input type="checkbox" />
         <span></span>
