--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,10 @@
         <h3>Zauberkette</h3>                    
     </div>
     <div class="nav-right">
+        <button class="vol-btn" onclick="changeMute()">
+            <img class="volume_up" src="assets/images/icons/volume_up.png" alt="">
+            <img class="volume_off" src="assets/images/icons/volume_off.png" alt="">
+        </button>
         <img src="assets/images/acc-helper.jpg" class="chain-helper" >
         <div class="menuToggle" id="menuToggle">
         <input type="checkbox" />
