--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,5 @@
 body {
+	position: relative;
 	text-align: center;
 	background-color: black;
 	color: rgb(32, 32, 32);
@@ -6,9 +7,10 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow-x: hidden;
-	overflow-y: hidden;
+	overflow-y: auto;
 	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
 		"Lucida Sans", Arial, sans-serif;
+		box-sizing: border-box;
 }
 
 h1 {
@@ -21,8 +23,15 @@ a {
 }
 
 main {
-	width: 100%;
-	margin: 0;
+	position: absolute;
+    top: 60px;
+    overflow-y: auto;
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 h3 {
