--- a/style/nav.css
+++ b/style/nav.css
@@ -1,12 +1,12 @@
-
-
-
 nav {
+  position: absolute;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  background-color: white;
+  background-color: rgb(84, 83, 83);
+  color: wheat;
 }
+
 .nav-left {
   position: relative;
   left: 0;
@@ -15,45 +15,51 @@ nav {
   display: flex;
   justify-content: flex-start;
 }
+
 .nav-left img {
   width: 60px;
   height: 60px;
-  
+
 }
+
 .nav-center {
-  
+
   padding-top: 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.nav-right{
+
+.nav-right {
   flex-grow: 0.2;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.menuToggle ul{
-position: relative;
-left: -80px;
+
+.menuToggle ul {
+  position: relative;
+  left: -80px;
 }
 
 #menuToggle {
   display: block;
   position: absolute;
   top: 20px;
-  right: 220px; /* POSITIONsPunkt menuToggle/menu */
+  right: 220px;
+  /* POSITIONsPunkt menuToggle/menu */
   z-index: 1;
   -webkit-user-select: none;
   user-select: none;
-  
+
 }
 
 #menuToggle a {
   text-decoration: none;
-  color: #232323; /* FONT COLOR */
+  color: #232323;
+  /* FONT COLOR */
   transition: color 0.3s ease;
-  
+
 }
 
 #menuToggle a:hover {
@@ -69,8 +75,10 @@ left: -80px;
   top: -11px;
   left: 188px;
   cursor: pointer;
-  opacity: 0; /* BOX IST VERSTECKT*/
-  z-index: 2; /* HIDDEN-CHECKBOX über hamburger */
+  opacity: 0;
+  /* BOX IST VERSTECKT*/
+  z-index: 2;
+  /* HIDDEN-CHECKBOX über hamburger */
   -webkit-touch-callout: none;
   /*spezielle webkit-erweiterung
     verhindert standardkontext wenn user
@@ -80,18 +88,23 @@ left: -80px;
 /* hamburger */
 #menuToggle span {
   display: block;
-  width: 33px; /*Strichdicke*/
+  width: 33px;
+  /*Strichdicke*/
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-  right: -200px; /*burger & X Position horizontal verschieben*/
-  background: #232323; /*COLOR FÜR BURGER*/
+  right: -200px;
+  /*burger & X Position horizontal verschieben*/
+  background: #232323;
+  /*COLOR FÜR BURGER*/
   border-radius: 3px;
   z-index: 1;
   transform-origin: 4px 0px;
-  transition: /*cubic-b. = timing-func mit beschleunigung und verzögerung*/ transform
-      0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease; /*Sichtbarkeit um 0.05s verzögert*/
+  transition:
+    /*cubic-b. = timing-func mit beschleunigung und verzögerung*/
+    transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  /*Sichtbarkeit um 0.05s verzögert*/
   /*ease = accelerando-ritardando*/
 }
 
@@ -107,25 +120,30 @@ left: -80px;
 }
 
 /* Transform span zu 'X'.*/
-#menuToggle input:checked ~ span {
+#menuToggle input:checked~span {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323; /*COLOR FÜR X*/
+  background: #232323;
+  /*COLOR FÜR X*/
 }
+
 /* versteckt dritten span */
-#menuToggle input:checked ~ span:nth-last-child(3) {
+#menuToggle input:checked~span:nth-last-child(3) {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
+
 /* Transform span zu crossmark.*/
-#menuToggle input:checked ~ span:nth-last-child(2) {
+#menuToggle input:checked~span:nth-last-child(2) {
   transform: rotate(-45deg) translate(0, -1px);
 }
+
 /*Position festlegen*/
 #menu {
   position: absolute;
   width: 100px;
-  margin: -100px 0 0 200px; /*Top, left, bottom,right mit umgekehrter Wirkung*/
+  margin: -100px 0 0 200px;
+  /*Top, left, bottom,right mit umgekehrter Wirkung*/
   padding: 20px;
   padding-top: 125px;
 
@@ -136,8 +154,10 @@ left: -80px;
   /* Bestimmungspunkt von parent aus 
    wo transform startet alt. für hier
    left top oder 0px 0px*/
-  transform-origin: 100% 0%; /*anstatt: 0 0*/
-  transform: translate(100%, 0); /*anstatt: -100%, 0*/
+  transform-origin: 100% 0%;
+  /*anstatt: 0 0*/
+  transform: translate(100%, 0);
+  /*anstatt: -100%, 0*/
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 }
 
@@ -146,7 +166,7 @@ left: -80px;
   font-size: 22px;
 }
 
-#menuToggle input:checked ~ ul {
+#menuToggle input:checked~ul {
   /* belässt Objekt in Form und Position bei Ausblendung*/
   transform: none;
 }
@@ -156,17 +176,21 @@ left: -80px;
     overflow-x: hidden;
     margin-left: 0;
     margin-right: 0;
-    padding: 0;   
+    padding: 0;
   }
+
   nav {
     justify-content: flex-start;
   }
+
   .nav-center {
 
-padding-left: 80px;
+    padding-left: 80px;
   }
+
   #menu {
     position: absolute;
     width: 100px;
-    margin: -100px 0 0 160px; /*Top, left, bottom,right mit umgekehrter Wirkung*/
-}
+    margin: -100px 0 0 160px;
+    /*Top, left, bottom,right mit umgekehrter Wirkung*/
+  }
