--- a/style/table.css
+++ b/style/table.css
@@ -11,6 +11,7 @@
   display: flex;
   padding: 4px 0 4px 12px;
   gap: 4px;
+  align-items: center;
 }
 .game-goal input {
   margin: 4px;
@@ -58,20 +59,28 @@
     position: relative;
 }
 
-.observer-part {
-  height: 30%;
+.table-frame {
+  width: 100%;
+  height: 100%;
+}
+
+.table-top {
+  height: 50%;
   background-color: rgb(222, 168, 61);
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
 
-.second-part {
+.table-center {
+  position: absolute;
+  width: 100%;
+  height: auto;
   top: 50%;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
-  background-color: rgb(248, 255, 233);
+  background-color: transparent;
 }
 
 .btn-group {
@@ -96,8 +105,8 @@
   width: auto;
 }
 
-.current-player-part {
-  flex-grow: 1;
+.table-bottom {
+  height: 50%;
   background-color: rgb(222, 168, 61);
   display: flex;
   justify-content: flex-end;
@@ -213,13 +222,6 @@
   flex-direction: column;
 }
 
-.bottom-zone {
-  justify-content: flex-start;
-}
-
-.bottom-zone h3 {
-  padding-top: 32px;
-}
 
 .card-group {
   display: flex;
