--- a/style/table.css
+++ b/style/table.css
@@ -7,7 +7,7 @@
   display: flex;
   color: #f2f2f2;
   background-color: black; 
-  z-index: 1000; 
+  z-index: 10; 
 }
 
 
@@ -76,6 +76,11 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+}
+
+.rotated-180 {
+  transform: rotate(180deg);
+  transform-origin: center center;
 }
 
 .table-center {
