--- a/templates/header.html
+++ b/templates/header.html
@@ -17,6 +17,7 @@
         <span></span>
         <span></span>
         <ul id="menu">
+            <a href="#"><div onclick="changeView()">mirror-view</div></a>
             <a href="index.html">Home</a><br>
             <a href="javascript:void(0);" onclick="openRulesPopup()">Game Rules</a><br>
             <a href="">More</a>
