--- a/style/main.css
+++ b/style/main.css
@@ -23,15 +23,9 @@ a {
 }
 
 main {
-	position: absolute;
-    top: 60px;
-    overflow-y: auto;
-    height: 100vh;
-    width: 100%;
-    margin: 0;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
+position: relative;
+height: 100vh;
+width: 100%;;
 }
 
 h3 {
