--- a/templates/header.html
+++ b/templates/header.html
@@ -1,27 +1,29 @@
 <nav>
-    <div class="nav-left">            
-        <img src="assets/images/Locri-49K.jpeg" alt="">                     
+    <div class="nav-left">
+        <img src="assets/images/Locri-49K.jpeg" alt="">
     </div>
     <div class="nav-center">
-        <h3>Zauberkette</h3>                    
+        <h3>Zauberkette</h3>
     </div>
     <div class="nav-right">
         <button class="vol-btn" onclick="changeMute()">
             <img class="volume_up" src="assets/images/icons/volume_up.png" alt="">
             <img class="volume_off" src="assets/images/icons/volume_off.png" alt="">
         </button>
-        <img src="assets/images/acc-helper.jpg" class="chain-helper" >
-        <div class="menuToggle" id="menuToggle">
-        <input type="checkbox" />
-        <span></span>
-        <span></span>
-        <span></span>
-        <ul id="menu">
-            <a href="#"><div onclick="changeView()">mirror-view</div></a>
-            <a href="index.html">Home</a><br>
-            <a href="javascript:void(0);" onclick="openRulesPopup()">Game Rules</a><br>
-            <a href="">More</a>
-        </ul>
-        
-    </div>
+        <img src="assets/images/acc-helper.jpg" class="chain-helper">
+
+        <div class="menuToggle" id="menuToggle" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+              <a href="#">
+                <div onclick="changeView()">mirror-view</div>
+              </a>
+              <a href="index.html">Home</a><br>
+              <a href="javascript:void(0);" onclick="openRulesPopup()">Game Rules</a><br>
+              <a href="">More</a>
+            </ul>
+          </div>
+          
 </nav>
