--- a/style/nav.css
+++ b/style/nav.css
@@ -1,6 +1,5 @@
-
- 
- nav,header {
+nav,
+header {
   position: fixed;
   width: 100%;
   display: flex;
@@ -14,29 +13,67 @@
   position: relative;
   left: 0;
   top: 0;
-  width: 24px;
-  display: flex;
-  justify-content: flex-start;
-}
-
-.nav-left img {
   width: 60px;
   height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
+}
+
+.logo {
+  width: 40px;
+  height: 40px;
 }
 
 .nav-center {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
-  padding-top: 16px;
+.center-right {
+  width: 45%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.chain-helper {
+  margin-left: 40px;
+  height: 32px;
+  width: auto;
+  z-index: 30;
+}
+
+.chain-helper.expanded {
+  position: absolute;
+  top: 100px;
+  right: 100px;
+  margin: 32px;
+  height: 600px;
+  width: auto;
 }
 
 .nav-right {
   flex-grow: 0.2;
   display: flex;
   align-items: center;
+}
+
+.game-goal {
+  width: 100%;
+  display: flex;
+  padding: 4px 0 4px 12px;
+  gap: 4px;
+  align-items: center;
+}
+
+.game-goal input {
+  margin: 4px;
+  width: auto;
 }
 
 .menuToggle ul {
@@ -128,15 +165,15 @@
 
 
 .sideInfo {
-display : flex;
-flex-direction : column;
-position : fixed;
-left : 0;
-top : 100%;
-transform : translateY(-50%) rotate(-90deg);
-transform-origin : left top;
-width : 100vh;
-z-index : 10;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  left: 0;
+  top: 100%;
+  transform: translateY(-50%) rotate(-90deg);
+  transform-origin: left top;
+  width: 100vh;
+  z-index: 10;
 }
 
 @media (max-width: 375px) {
