--- a/style/nav.css
+++ b/style/nav.css
@@ -5,7 +5,7 @@ header {
   display: flex;
   justify-content: space-between;
   background-color: rgb(84, 83, 83);
-  color: wheat;
+  color: #f5deb3;
   z-index: 1000;
 }
 
@@ -41,20 +41,22 @@ header {
   align-items: center;
 }
 
-.chain-helper {
-  margin-left: 40px;
-  height: 32px;
-  width: auto;
-  z-index: 30;
+.screen-btn, .vol-btn {
+  width: fit-content;
+  background-color: unset;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 8px;
+  border-radius: 4px;
+  border-width: 1px;
+  box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.5);
 }
 
-.chain-helper.expanded {
-  position: absolute;
-  top: 100px;
-  right: 100px;
-  margin: 32px;
-  height: 600px;
-  width: auto;
+.screen-btn img {
+width: 24px;
+height: auto;
 }
 
 .nav-right {
