--- a/templates/header.html
+++ b/templates/header.html
@@ -8,15 +8,21 @@
       <div class="game-goal" id="gameGoalID">
         <span>Spielziel Zauberkettenlänge:</span>
         <input type="number" id="goalInput" value="5" min="2" max="12" step="1" onchange="updateGoal()">
-  
+
       </div>
       <button class="vol-btn" onclick="changeMute()">
         <img class="volume_up" src="assets/images/icons/volume_up.png" alt="">
         <img class="volume_off" src="assets/images/icons/volume_off.png" alt="">
       </button>
-      <img src="assets/images/acc-helper.jpg" class="chain-helper">
+
+      <button class="screen-btn" id="fullscreenBtn" onclick="toggleFullscreen()">
+        <img class="fullscreen-enter" src="assets/images/icons/fullscreen-enter-32.png" alt="Enter Fullscreen">
+        <img class="fullscreen-exit" src="assets/images/icons/fullscreen-exit-32.png" alt="Exit Fullscreen"
+          style="display: none;">
+      </button>
+
     </div>
-    </div>
+  </div>
   <div class="nav-right">
     <div class="menuToggle" id="menuToggle" onclick="toggleMenu()">
       <span></span>
