--- a/templates/header.html
+++ b/templates/header.html
@@ -10,17 +10,20 @@
         <input type="number" id="goalInput" value="5" min="2" max="12" step="1" onchange="updateGoal()">
 
       </div>
-      <button class="vol-btn" onclick="changeMute()">
-        <img class="volume_up" src="assets/images/icons/volume_up.png" alt="">
-        <img class="volume_off" src="assets/images/icons/volume_off.png" alt="">
+      <button class="nav-btn" onclick="changeMute()">
+        <img class="volume_up" src="assets/images/btn/volume_up.png" alt="">
+        <img class="volume_off" src="assets/images/btn/volume_off.png" alt="">
       </button>
 
-      <button class="screen-btn" id="fullscreenBtn" onclick="toggleFullscreen()">
-        <img class="fullscreen-enter" src="assets/images/icons/fullscreen-enter-32.png" alt="Enter Fullscreen">
-        <img class="fullscreen-exit" src="assets/images/icons/fullscreen-exit-32.png" alt="Exit Fullscreen"
+      <button class="nav-btn" id="fullscreenBtn" onclick="toggleFullscreen()">
+        <img class="fullscreen-enter" src="assets/images/btn/fullscreen-enter-32.png" alt="Enter Fullscreen">
+        <img class="fullscreen-exit" src="assets/images/btn/fullscreen-exit-32.png" alt="Exit Fullscreen"
           style="display: none;">
       </button>
 
+      <button class="nav-btn" onclick="skipToStart()">
+        <img class="volume_up" src="assets/images/btn/skip-to-start-32.png" alt="">
+      </button>
     </div>
   </div>
   <div class="nav-right">
