fixed problem with two mellots. change some styles

--- a/style/nav.css
+++ b/style/nav.css
@@ -54,8 +54,8 @@ header {
   box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.5);
 }
 
-.screen-btn img {
-width: 24px;
+.nav-btn img {
+width: fit-content;
 height: auto;
 }
 
