--- a/style/main.css
+++ b/style/main.css
@@ -10,7 +10,7 @@ body {
 	overflow-y: auto;
 	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
 		"Lucida Sans", Arial, sans-serif;
-		box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 h1 {
@@ -23,9 +23,10 @@ a {
 }
 
 main {
-position: relative;
-height: 100vh;
-width: 100%;;
+	position: relative;
+	height: 100vh;
+	width: 100%;
+	;
 }
 
 h3 {
@@ -72,9 +73,11 @@ h3 {
 	width: 2em;
 	display: none;
 }
+
 /*--------------- POPUP ----------------------*/
 .popup {
-	display: none;	/*default*/
+	display: none;
+	/*default*/
 	position: absolute;
 	width: 100vw;
 	height: 100vh;
@@ -89,19 +92,38 @@ h3 {
 	padding-bottom: 80px;
 }
 
-/*overwrite popup*/
 .allCards {
-	padding-top: 0 !important;
-	display: grid !important;
-    grid-template-columns: repeat(4, 2fr);
-    align-items: center;
-    justify-items: center;
+	padding-top: 0;
+	display: flex;
+	align-items: center;
+	justify-items: center;
+}
+
+.card-item {
+	position: absolute;
+	transform-origin: center center;
+	width: 40px;
+	height: auto;
+	pointer-events: none;
+}
+
+.pop-circle-card {
+	/* inside card-item */
+	width: 100%;
+	height: auto;
+	cursor: pointer;
+	pointer-events: all;
+}
+
+.pop-card {
+	width: 10%;
+	height: auto;
 }
 
 .popup-info {
 	width: 80%;
 	height: auto;
-    overflow-y: auto;
+	overflow-y: auto;
 	padding: 20px;
 	background-color: rgb(240, 240, 240);
 	color: rgb(32, 32, 32);
@@ -110,20 +132,8 @@ h3 {
 }
 
 .close-box {
-    position: relative;
-    top: -9px;
-    right: -96%;
-    width: 30px;
-}
-
-
-.pop-card {
-	width: 10%;
-	height: auto;
-}
-
-.all-pop-card{
-	width: 60%;
-	max-width: 120px;
-	height: auto;
+	position: relative;
+	top: -9px;
+	right: -96%;
+	width: 30px;
 }
