--- a/style/table.css
+++ b/style/table.css
@@ -13,8 +13,24 @@ main {
   margin: 4px 0px;
 }
 
-@keyframes fadeOutIn {
+.empty-acc {
+  display: none;
+  position: absolute;
+  color: orange;
+  top: 50%;
+  left: 42%;
+  animation: fadeInOut 2s;
+  font-size: 80px;
+}
 
+.flex-column {
+ display:flex; 
+ flex-direction:column;
+ justify-content: center;
+ align-items: center;
+}
+
+@keyframes fadeOutIn {
   0%,
   100% {
     opacity: 1;
@@ -22,6 +38,17 @@ main {
 
   50% {
     opacity: 0;
+  }
+}
+
+@keyframes fadeInOut {
+  0%,
+  100% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
   }
 }
 
@@ -413,7 +440,7 @@ img {
   text-align: center;
 }
 
-.no-btn {  
+.no-btn {
   padding: 20px;
   max-height: fit-content;
   background-size: 100% 100%;
@@ -445,7 +472,7 @@ img {
   color: rgb(55, 42, 32);
 }
 
-.small-font{
+.small-font {
   font-size: 0.8em;
 }
 
@@ -453,7 +480,7 @@ img {
   background-image: url('./../assets/images/bgr/brass-gear1.png');
   color: rgb(55, 42, 32);
   background-size: 24px 24px;
-  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
   background-position: center;
 }
 
@@ -461,7 +488,7 @@ img {
   background-image: url('./../assets/images/bgr/brass-gear2.png');
   color: rgb(55, 42, 32);
   background-size: 24px 24px;
-  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
   background-position: center;
 }
 
