--- a/style/table.css
+++ b/style/table.css
@@ -170,7 +170,7 @@ main {
 }
 
 .table-bottom {
-  height: 50%;
+  /*height: 50%;*/
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -187,8 +187,7 @@ main {
 .circle-img {
   background-image: url('./../assets/images/bgr/brass-circle.png');
   background-size: 180px;
-  background-position-x: 64%;
-  background-position-y: 55%;
+  background-position: 50% 50%;
   background-repeat: no-repeat;
   position: relative;
   width: 240px;
@@ -197,12 +196,12 @@ main {
 /*.chain */
 .accCard {
   position: absolute;
-  left: 49%;
-  top: 50%;
+  left: 46%;
+  top: 46%;
   transform: translate(-50%, -50%);
   width: 12px;
   height: 18px;
-  background-color: rgb(198, 29, 29);
+  background-color: rgb(146, 146, 146);
   border-radius: 10px;
   margin: 5px;
   z-index: 1;
