--- a/templates/header.html
+++ b/templates/header.html
@@ -6,9 +6,8 @@
     <h3>Zauberkette</h3>
     <div class="center-right">
       <div class="game-goal" id="gameGoalID">
-        <span>Spielziel Zauberkettenlänge:</span>
+        <span>Spielziel <br> Zauberkettenlänge:</span>
         <input type="number" id="goalInput" value="5" min="2" max="12" step="1" onchange="updateGoal()">
-
       </div>
       <button class="nav-btn" onclick="changeMute()">
         <img class="volume_up" src="assets/images/btn/volume_up.png" alt="">
