fixed some isues, work on style

--- a/templates/header.html
+++ b/templates/header.html
@@ -4,11 +4,20 @@
   </div>
   <div class="nav-center">
     <h3>Zauberkette</h3>
-    <div class="center-right">
+
+  </div>
+  <div class="nav-right">
+    <div class="nav-btns">
       <div class="game-goal" id="gameGoalID">
         <span>Spielziel <br> Zauberkettenlänge:</span>
         <input type="number" id="goalInput" value="5" min="2" max="12" step="1" onchange="updateGoal()">
       </div>
+
+      <button class="nav-btn" onclick="changeView()">
+        <img class="turn" src="assets/images/btn/turn.png" alt=""> 
+        <img class="turn-back" src="assets/images/btn/turn-back.png" alt="">    
+      </button>
+
       <button class="nav-btn" onclick="changeMute()">
         <img class="volume_up" src="assets/images/btn/volume_up.png" alt="">
         <img class="volume_off" src="assets/images/btn/volume_off.png" alt="">
@@ -24,8 +33,7 @@
         <img class="volume_up" src="assets/images/btn/skip-to-start-32.png" alt="">
       </button>
     </div>
-  </div>
-  <div class="nav-right">
+
     <div class="menuToggle" id="menuToggle" onclick="toggleMenu()">
       <span></span>
       <span></span>
