--- a/style/nav.css
+++ b/style/nav.css
@@ -15,7 +15,7 @@ nav {
 
 .nav-left {
   position: relative;
-  left: 0;
+  left: 12px;
   top: 0;
   width: 60px;
   height: 60px;
@@ -49,7 +49,7 @@ input[type=number] {
     -moz-appearance: textfield; 
 }
 */
-.center-right {
+.nav-btns {
   width: 45%;
   display: flex;
   justify-content: space-between;
@@ -75,8 +75,21 @@ input[type=number] {
   z-index: 1;
 }
 
+.turn {
+  display: block;
+  width: 32px !important;
+  height: auto;
+}
+
+.turn-back {
+  display: none;
+  width: 32px !important;
+  height: auto;
+}
+
 .nav-right {
-  flex-grow: 0.2;
+  width: 100%;
+  margin-right: 80px;
   display: flex;
   align-items: center;
 }
