--- a/style/table.css
+++ b/style/table.css
@@ -159,10 +159,11 @@ main {
 }
 
 .left-center-frame {
+  width: 40%;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  margin-left: 32px;
+  justify-content: center;
+  margin: 0 32px;
 }
 
 .shimmering-gold {
@@ -205,7 +206,7 @@ main {
   background-color: rgb(146, 146, 146);
   border-radius: 10px;
   margin: 5px;
-  z-index: 1;
+  z-index: 100;
 }
 
 /*.chain */
@@ -431,7 +432,7 @@ img {
   width: 60%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   gap: 8px;
 }
 
