--- a/style/table.css
+++ b/style/table.css
@@ -205,7 +205,7 @@ main {
   height: 18px;
   background-color: rgb(146, 146, 146);
   border-radius: 10px;
-  margin: 1px;
+  margin: 5px;
 }
 
 /*.chain */
@@ -214,6 +214,8 @@ main {
   height: 100%;
   object-fit: cover;
   border-radius: 10px;
+  padding: 20px; /* Unsichtbares Padding für größeren Hover-Bereich */
+  box-sizing: content-box;
 }
 
 /*----------GAME ZONE---------------*/
